syntax = "proto3";

option csharp_namespace = "CourierService";

package couriers;

service MainCouriers {
  rpc FindActiveCourier (ActiveCourierRequest) returns (ActiveCourierReply);
}

message ActiveCourierRequest {
  double longitude = 1;
  double latitude = 2;
}

message ActiveCourierReply {
  string login = 1;
}